<resources>
    <string name="app_name">DroidCaffe</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="froyo_is_premium_self_serve_frozen_yougurt">FroYo is premium self-serve frozen yougurt</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="donuts_are_glazedand_sprinkled_with_candy">Donuts are glazedand sprinkled with candy</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="choose_a_desert">Choose a desert</string>
    <string name="todo">TODO</string>
</resources>