<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="362dp"
        android:layout_height="514dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/icecream_circle"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="169dp"
            android:layout_height="66dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="123dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/donuts_are_glazedand_sprinkled_with_candy"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/donut_circle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="160dp"
            android:layout_height="68dp"
            android:layout_below="@+id/textView"
            android:layout_marginStart="32dp"
            android:layout_marginTop="78dp"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="151dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="30dp"
            android:layout_marginTop="53dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/froyo_is_premium_self_serve_frozen_yougurt"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/froyo_circle"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="169dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="18dp"
            android:text="@string/droid_desserts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="14dp"
            android:text="@string/choose_a_desert" />

        <Button
            android:id="@+id/button"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:text="DELIV" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>